feat: add chat_enpoint with mock implementation
- Add ChatRequest, Action, ChatResponse Schemas
- Add dummy actions to endpoint  temporarily
- Add Action Schema to API contract
-Update test_api.py for chat_endpoint
